deploys/recreator/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: api-deploy-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: apiaulakubedevio.127.0.0.1.nip.io
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: api-versao-service
            port:
              number: 80
